# sugeno-classifier

./: LICENSE  README.md  README.rst  setup.cfg
Sugeno_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
classifier/: sugeno_classifier.py
classifier/mediator/: mediator.py  predictor.py
classifier/mediator/components/: capacity.py  feature_transformation.py  helper.py  threshold.py
doc/: documentation_DE.aux  documentation_DE.tex  documentation_DE.toc
tests/: __int__.py  test_sugeno_classifier.py
tests/mediator/: __init__.py  test_fitter.py  test_mediator.py
tests/mediator/components/: __init__.py  test_capacity.py  test_feature_transformation.py  test_helper.py  test_sugeno_integral.py  test_threshold.py
