[metadata]
name = sugeno-classifier
version = 1.0.0
author = Sven Meyer
author_email = None
description = Implementation of the Sugeno classifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smeyer198/sugeno-classifier
license = MIT
classifiers = Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy>=1.19.0
    scikit-learn>=0.24.1
    pulp>=2.4
tests_require = nose2

[options.packages.find]
exclude = tests