[metadata]
name = sugeno-classifier
version = 1.1.0
author = Sven Meyer
description = Implementation of the Sugeno classifier
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/smeyer198/sugeno-classifier
license = MIT
classifiers = Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages = find:
install_requires =
    numpy>=1.19.0
    scikit-learn>=0.24.1
    pulp>=2.4
tests_require = nose2

[options.packages.find]
exclude = tests
